==> Juank23/esp32cnc/esp32cnc/system.cpp <==
#include "grbl.h"

void systemInit()
{
	//CONTROL_DDR &= ~(CONTROL_MASK); // Configure as input pins
#ifdef DISABLE_CONTROL_PIN_PULL_UP
	pinMode(RESETPIN, INPUT);
	pinMode(FEEDHOLDPIN, INPUT);
	pinMode(CYCLESTARTPIN, INPUT);
	pinMode(SAFTEYDOORPIN, INPUT);
	attachInterrupt(RESETPIN, resetPinHandler, ONLOW);
	attachInterrupt(FEEDHOLDPIN, feedPinHandler, ONLOW);
	attachInterrupt(CYCLESTARTPIN, cycleStartPinHandler, ONLOW);
	attachInterrupt(SAFTEYDOORPIN, safteyDoorPinHandler, ONLOW);

	//CONTROL_PORT &= ~(CONTROL_MASK); // Normal low operation. Requires external pull-down.
#else
	pinMode(RESETPIN, INPUT_PULLUP);
	pinMode(FEEDHOLDPIN, INPUT_PULLUP);
	pinMode(CYCLESTARTPIN, INPUT_PULLUP);
	pinMode(SAFTEYDOORPIN, INPUT_PULLUP);
	attachInterrupt(RESETPIN, resetPinHandler, ONHIGH);
	attachInterrupt(FEEDHOLDPIN, feedPinHandler, ONHIGH);
	attachInterrupt(CYCLESTARTPIN, cycleStartPinHandler, ONHIGH);
	attachInterrupt(SAFTEYDOORPIN, safteyDoorPinHandler, ONHIGH);
	//CONTROL_PORT |= CONTROL_MASK;   // Enable internal pull-up resistors. Normal high operation.
#endif

	//CONTROL_PCMSK |= CONTROL_MASK;  // Enable specific pins of the Pin Change Interrupt
	//PCICR |= (1 << CONTROL_INT);   // Enable Pin Change Interrupt

}

uint8_t system_control_get_state()
{
	// here we read the control pin state from 
	uint8_t control_state = 0;
	//	uint8_t pin = (CONTROL_PIN & CONTROL_MASK);
	uint8_t resetPinState;
	uint8_t feedPinState;
	uint8_t cycleStartPinState;
	uint8_t safetyDoorPinState;
	// read the control pin state and return the maske bits
#ifdef INVERT_CONTROL_PIN_MASK
	//pin ^= INVERT_CONTROL_PIN_MASK;
	resetPinState ^= digitalRead(RESETPIN);
	feedPinState ^= digitalRead(FEEDHOLDPIN);
	cycleStartPinState ^= digitalRead(CYCLESTARTPIN);
	safetyDoorPinState ^= digitalRead(SAFTEYDOORPIN);
#else
	resetPinState = digitalRead(RESETPIN);
	feedPinState = digitalRead(FEEDHOLDPIN);
	cycleStartPinState = digitalRead(CYCLESTARTPIN);
	safetyDoorPinState = digitalRead(SAFTEYDOORPIN);
#endif
	//	if (bit_isfalse(pin, (1 << CONTROL_RESET_BIT))) { control_state |= CONTROL_PIN_INDEX_RESET; }
	//	if (pin) {
#ifdef ENABLE_SAFETY_DOOR_INPUT_PIN
	if(safetyDoorPinState == 0)
	{
		control_state |= CONTROL_PIN_INDEX_SAFETY_DOOR;
	}
#endif
	if(resetPinState == 0)
	{
		control_state |= CONTROL_PIN_INDEX_RESET;
	}
	if(feedPinState == 0)
	{
		control_state |= CONTROL_PIN_INDEX_FEED_HOLD;
	}
	if(cycleStartPinState)
	{
		control_state |= CONTROL_PIN_INDEX_CYCLE_START;
	}
	//}
	return(control_state);
}
